--- a/DrinkWater/DrinkWater/App.xaml
+++ b/DrinkWater/DrinkWater/App.xaml
@@ -4,6 +4,19 @@
              xmlns:local="clr-namespace:DrinkWater"
              StartupUri="LogReg/Login.xaml">
     <Application.Resources>
-
+        <Style TargetType="{x:Type TextBox}" x:Key="LoginTextBox">
+            <Style.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="5" />
+                </Style>
+            </Style.Resources>
+        </Style>
+        <Style TargetType="{x:Type Button}" x:Key="LoginButton">
+            <Style.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="5" />
+                </Style>
+            </Style.Resources>
+        </Style>
     </Application.Resources>
 </Application>
