--- a/DrinkWater/DrinkWater/LogReg/Login.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Login.xaml
@@ -3,32 +3,45 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DrinkWater.LogReg"
         mc:Ignorable="d"
-        Title="" Height="350" Width="485">
-    <Grid Margin="0,10,0,0" RenderTransformOrigin="0.761,0.5" HorizontalAlignment="Left" Width="500">
+        Title="Drink Water" Height="437.5" Width="700">
+    <Grid  HorizontalAlignment="Center" Width="700" Background="#E1EDFD">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="0*"/>
             <RowDefinition Height="0*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="31*"/>
-            <ColumnDefinition Width="219*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="textBoxUsername" HorizontalAlignment="Left" Margin="111,97,0,0" Text="Misha" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20" Grid.Column="1" RenderTransformOrigin="0.515,0.608"/>
-        <TextBox x:Name="textBoxPassword" HorizontalAlignment="Left" Margin="111,168,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20" RenderTransformOrigin="0.491,0.621" Grid.Column="1"/>
-        <Button x:Name="buttonCreateNewAccount" Content="Create new account" HorizontalAlignment="Left" Margin="48,255,0,0" VerticalAlignment="Top" Height="22" Width="120" Click="Button_Click" RenderTransformOrigin="1.509,0.651" Grid.ColumnSpan="2"/>
-        <Button x:Name="buttonLogIn" Content="Log in" HorizontalAlignment="Left" Margin="242,255,0,0" VerticalAlignment="Top" Height="22" Width="120" RenderTransformOrigin="-2.009,0.513" Click="button2_Click" Grid.Column="1"/>
-        <Label Content="Username:" HorizontalAlignment="Left" Margin="105,73,0,0" VerticalAlignment="Top" Height="24" RenderTransformOrigin="0.409,0.56" Grid.Column="1"/>
-        <Label Content="Password:" HorizontalAlignment="Left" Margin="104,144,0,0" VerticalAlignment="Top" Height="24" Grid.Column="1"/>
-        <Label Content="Log in" Grid.Column="1" HorizontalAlignment="Left" Margin="135,32,0,0" VerticalAlignment="Top" FontFamily="Arial Black" FontSize="14"/>
-        <Label x:Name="labelUsername" Visibility="Hidden" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="105,117,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="labelPassword" Visibility="Hidden" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="104,188,0,0" VerticalAlignment="Top"/>
+
+        <TextBox x:Name="textBoxUsername" Style="{StaticResource LoginTextBox}" HorizontalAlignment="Center" Margin="0,124,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="1" FontFamily="Segoe UI" Foreground="#FF424141"/>
+        <TextBox x:Name="textBoxPassword" Style="{StaticResource LoginTextBox}" HorizontalAlignment="Center" Margin="0,210,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="1" Foreground="#FF424141"/>
+
+        <Button x:Name="buttonCreateNewAccount"   BorderBrush="Transparent"
+                BorderThickness="0" Background="Transparent" Foreground="Black"
+                Content="Create new account" HorizontalAlignment="Left" 
+                Margin="220,320,0,0" VerticalAlignment="Top" 
+                Height="22" Width="110" Click="buttonCreateNewAccount_Click" 
+                Grid.ColumnSpan="2" FontFamily="Bahnschrift SemiBold"/>
+        <Button x:Name="buttonLogIn" Content="Log in" 
+                HorizontalAlignment="Left" Margin="370,320,0,0" 
+                VerticalAlignment="Top" Height="22" Width="110" 
+                Click="buttonLogIn_Click" Grid.Column="1"
+                Background="#F18989" BorderBrush="Transparent"
+                BorderThickness="0" RenderTransformOrigin="0.5,0.5" Foreground="Black" FontFamily="Bahnschrift SemiBold" Style="{StaticResource LoginButton}"/>
+        <Label Content="Username:" HorizontalAlignment="Left" Margin="215,100,0,0" VerticalAlignment="Top" Height="24" Grid.Column="1" Width="75" FontFamily="Bahnschrift SemiBold" FontWeight="Normal" Foreground="Black"/>
+        <Label Content="Password:" HorizontalAlignment="Left" Margin="216,186,0,0" VerticalAlignment="Top" Height="24" Grid.Column="1" Width="75" FontFamily="Bahnschrift SemiBold" Foreground="Black"/>
+        <Label Content="Log in" Grid.Column="1" HorizontalAlignment="Center" Margin="0,39,0,0" VerticalAlignment="Top" FontFamily="Bahnschrift SemiBold" FontSize="16" Height="28" Width="56" FontWeight="Bold"/>
+        <Label x:Name="labelUsername" Visibility="Hidden" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="215,146,0,0" VerticalAlignment="Top" Height="26" Width="260"/>
+        <Label x:Name="labelPassword"  Visibility="Hidden" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="215,232,0,0" VerticalAlignment="Top" Height="26" Width="260"/>
 
     </Grid>
 </Window>
