--- a/DrinkWater/DrinkWater/LogReg/Registration.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Registration.xaml
@@ -5,29 +5,36 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DrinkWater.LogReg"
         mc:Ignorable="d"
-        Title="" Height="500" Width="800">
-    <Grid RenderTransformOrigin="1.005,0.504">
+        Title="Drink Water" Height="500" Width="800" Background="#E1EDFD">
+    <Grid  HorizontalAlignment="Center" Width="800">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="0*"/>
+            <RowDefinition Height="0*"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="71*"/>
-            <ColumnDefinition Width="7*"/>
-            <ColumnDefinition Width="722*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="textBoxUsername" HorizontalAlignment="Left" Margin="257,108,0,0" Text="Misha" TextWrapping="Wrap" VerticalAlignment="Top" Width="126" Height="20" RenderTransformOrigin="0.538,0.513" Grid.Column="2"/>
-        <TextBox x:Name="textBoxEmail" HorizontalAlignment="Left" Margin="257,173,0,0" Text="misha@gmail.com" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20" Grid.Column="2"/>
-        <TextBox x:Name="textBoxPassword" HorizontalAlignment="Left" Margin="257,242,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18" Grid.Column="2"/>
-        <TextBox  x:Name="textBoxConfirmPassword" HorizontalAlignment="Left" Margin="257,309,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18" Grid.Column="2"/>
-        <Button x:Name="buttonSignUp" Content="Sign up" HorizontalAlignment="Left" Margin="257,379,0,0" VerticalAlignment="Top" Height="22" Width="120" Click="Button_Click" RenderTransformOrigin="0.494,0.667" Grid.Column="2"/>
-        <Label Content="Username:" HorizontalAlignment="Left" Margin="252,82,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67" Grid.Column="2" Height="26"/>
-        <Label Content="Email:" HorizontalAlignment="Left" Margin="252,147,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67" Grid.Column="2" Height="26"/>
-        <Label Content="Password:" HorizontalAlignment="Left" Margin="252,216,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67" Grid.Column="2" Height="26"/>
-        <Label Content="Confirm password:" HorizontalAlignment="Left" Margin="252,283,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="117" Grid.Column="2" Height="26"/>
-        <Label x:Name="labelUsername" Visibility="Hidden" Content="" HorizontalAlignment="Left"  Margin="252,128,0,0" VerticalAlignment="Top" Background="White"  Grid.Column="2" Height="26" Width="334" />
-        <Label x:Name="labelEmail" Visibility="Hidden" Content="" HorizontalAlignment="Left" Margin="252,193,0,0" VerticalAlignment="Top"  Grid.Column="2" Height="26" Width="305"   />
-        <Label x:Name="labelPassword" Visibility="Hidden" Content="Label" HorizontalAlignment="Left"  Margin="252,260,0,0" VerticalAlignment="Top"   Grid.Column="2" Height="26" Width="377"/>
-        <Label x:Name="labelPasswordConfirm" Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="252,327,0,0"   Visibility="Hidden" VerticalAlignment="Top" Width="212"/>
-        <Label Content=" Sign up" Grid.Column="2" HorizontalAlignment="Left" Margin="275,40,0,0" VerticalAlignment="Top" Width="108" AutomationProperties.HelpText="" FontSize="14" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Opacity="0.985"/>
+        <TextBox  Style="{StaticResource LoginTextBox}" x:Name="textBoxUsername" HorizontalAlignment="Center" Margin="0,105,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="2"/>
+        <TextBox  Style="{StaticResource LoginTextBox}" x:Name="textBoxEmail" HorizontalAlignment="Center" Margin="0,175,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22"  Grid.Column="2"/>
+        <TextBox  Style="{StaticResource LoginTextBox}" x:Name="textBoxPassword" HorizontalAlignment="Center" Margin="0,250,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="2">
 
+        </TextBox>
+        <TextBox   Style="{StaticResource LoginTextBox}" x:Name="textBoxConfirmPassword" HorizontalAlignment="Center" Margin="0,325,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="2"/>
+        <Button Style="{StaticResource LoginButton}" x:Name="buttonSignUp"  Background="#F18989" BorderBrush="Transparent"
+                BorderThickness="0" Content="Sign up" HorizontalAlignment="Left" Margin="410,399,0,0" VerticalAlignment="Top" Height="22" Width="120" Click="buttonSignUp_Click" Grid.Column="2" FontFamily="Bahnschrift SemiBold"/>
+        <Label Content="Username:" HorizontalAlignment="Left" Margin="266,79,0,0"  Width="69" Grid.Column="2" FontFamily="Bahnschrift SemiBold" Height="26" VerticalAlignment="Top"/>
+        <Label Content="Email:" HorizontalAlignment="Left" Margin="266,148,0,0"  Width="60" Grid.Column="2" FontFamily="Bahnschrift SemiBold" Height="26" VerticalAlignment="Top"/>
+        <Label Content="Password:" Margin="266,223,0,0" Grid.Column="2" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" Width="86" Height="26" VerticalAlignment="Top"/>
+        <Label Content="Confirm password:" Margin="266,300,0,0" Grid.Column="2" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" Height="26" Width="156" VerticalAlignment="Top"/>
+        <Label x:Name="labelUsername" Visibility="Hidden" Content="label" HorizontalAlignment="Left"  Margin="258,127,0,0" VerticalAlignment="Top" Background="White"  Grid.Column="2" Height="26" Width="377" />
+        <Label x:Name="labelEmail" Visibility="Hidden" Content="label" HorizontalAlignment="Left" Margin="258,197,0,0" VerticalAlignment="Top"  Grid.Column="2" Height="26" Width="377"   />
+        <Label x:Name="labelPassword" Visibility="Hidden"  Content="Label" HorizontalAlignment="Left"  Margin="258,273,0,0" VerticalAlignment="Top"   Grid.Column="2" Height="26" Width="377"/>
+        <Label x:Name="labelPasswordConfirm" Visibility="Hidden" Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="258,347,0,0"    VerticalAlignment="Top" Width="377" Height="26"/>
+        <Label Content=" Sign up" Grid.Column="2" HorizontalAlignment="Left" Margin="362,32,0,0" VerticalAlignment="Top" Width="108" AutomationProperties.HelpText="" FontSize="16" FontFamily="Bahnschrift SemiBold" FontStyle="Italic" FontWeight="Normal" Opacity="0.985" Height="31"/>
     </Grid>
 </Window>
